# gemma-burger

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  makefile
app-server/: .env.example  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
app-server/backend/: package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
app-server/backend/src/: app.module.ts  main.ts
app-server/backend/src/chat/: chat.controller.spec.ts  chat.controller.ts  chat.service.spec.ts
app-server/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app-server/frontend/src/: App.css  App.tsx
app-server/public/: index.html  script.js  styles.css
app-server/src/: app.module.ts
app-server/src/chat/: chat.controller.ts  chat.module.ts  chat.service.ts
app-server/src/rag/: embeddings.ts  rag.module.ts  rag.service.ts
model-server/: .env.example  .gitignore  README.md  lora_config.yaml  pyproject.toml
model-server/adapters/: adapter_config.json
model-server/app/: agent.py  engine.py  main.py  rag.py
model-server/app/agent/: __init__.py  graph.py  handlers.py  router.py  state.py  utils.py
model-server/scripts/: download_from_hub.py  ingest.py  train_with_mlflow.py  upload_to_hub.py
model-server/tests/: conftest.py  test_agent_handlers.py
resources/: menu.json  personas.yaml  prompts.yaml  store_info.json
resources/fine_tuning/: train.jsonl
