[tool.poetry]
name = "gemma-burger-inference"
version = "0.1.0"
description = "Gemma-3 Inference Server for Mac Silicon"
authors = ["Fred <woosiks.io@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.6.0"
mlx-lm = "^0.28.3"
python-dotenv = "^1.0.0"
langchain = "^1.1.0"
langchain-community = "^0.4.1"
langchain-huggingface = "^1.1.0"
langchain-pinecone = "^0.2.13"
sentence-transformers = "^5.1.2"
boto3 = "^1.42.5"
mlflow = "^3.7.0"
langgraph = "^1.0.4"
langchain-core = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# 줄 길이 제한 (보통 88 또는 120 사용)
line-length = 88
# 제외할 디렉토리
exclude = [".venv", "migrations"]

[tool.ruff.lint]
# 활성화할 규칙 (E: 에러, F: Pyflakes, I: Import 정렬, N: 네이밍)
select = ["E", "F", "I", "N"]
# 무시할 규칙
ignore = []

# 자동 수정(Auto-fix) 가능하게 설정
fixable = ["ALL"]

[tool.ruff.format]
# 따옴표 스타일 (double이 파이썬 표준)
quote-style = "double"
# 들여쓰기 스타일
indent-style = "space"